# nebula-matrix-skills

./: .gitignore  CLAUDE.md  README.md
nbl-gen-reg/skills/nbl-gen-reg/scripts/: pyproject.toml
nbl-testplan-creator/skills/nbl-testplan-creator/scripts/: pyproject.toml
nbl-testplan-creator/skills/nbl-testplan-creator/scripts/nbl_testplan_creator/: __init__.py  __main__.py  cli.py
nbl-testplan-generator/: .gitignore  README.md  pyproject.toml
nbl-testplan-generator/.claude-plugin/: plugin.json
nbl-testplan-generator/docs/superpowers/plans/: 2026-04-19-testplan-skills-refactoring.md  2026-04-20-testplan-cfg-fixes.md
nbl-testplan-generator/docs/superpowers/specs/: 2026-04-19-testplan-skills-refactoring-design.md  2026-04-20-testplan-cfg-fixes-design.md
nbl-testplan-generator/scripts/: cfg_writer.py  func_writer.py
nbl-testplan-generator/skills/nbl-testplan-generator/: SKILL.md
nbl-testplan-generator/skills/nbl-testplan-generator/scripts/: __init__.py  func_writer.py  reg_to_json.py
nbl-testplan-generator/skills/nbl-testplan-generator/scripts/parsers/: docx_parser.py  md_parser.py  reg_parser.py  sample_parser.py
nbl-testplan-generator/skills/nbl-testplan-generator/scripts/review/: review_writer.py
nbl-testplan-generator/skills/nbl-testplan-generator/scripts/writers/: combine_writer.py  xlsx_writer.py
nbl-testplan-generator/skills/nbl-testplan-generator/templates/: tp_prompt.md
nbl-testplan-generator/skills/nbl-tp-func-gen/: SKILL.md
nbl-testplan-generator/skills/nbl-tp-func-gen/scripts/: reg_to_json.py
nbl-testplan-generator/skills/nbl-tp-func-gen/scripts/parsers/: md_parser.py  (+1 more)
nbl-testplan-generator/skills/testplan-cfg/: SKILL.md
nbl-testplan-generator/skills/testplan-cfg/scripts/: __init__.py  cfg_writer.py  xlsx_writer.py
nbl-testplan-generator/skills/testplan-cfg/templates/: cfg_prompt.md
nbl-testplan-generator/skills/testplan-func/: SKILL.md
nbl-testplan-generator/skills/testplan-func/scripts/: __init__.py  func_writer.py  md_parser.py  reg_to_json.py  validator.py
nbl-testplan-generator/skills/testplan-func/templates/: func_prompt.md
nbl-testplan-generator/src/nbl_testplan_generator/: __init__.py
nbl-testplan-generator/tests/: __init__.py  conftest.py  test_cfg_writer.py  test_combine_writer.py  test_md_parser.py  test_reg_to_json.py  test_testplan_cfg.py  test_testplan_func.py  test_testplan_generator.py  test_validator.py  test_xlsx_writer.py  test_xlsx_writer_cfg.py
nbl-testplan-generator/tests/fixtures/: expected_ch1_output.json  sample_reg.xlsx  sample_spec.md  upa_regs.xlsx
(+209 files in other folders)
