[project]
name = "nbl-testplan-generator"
version = "3.0.0"
description = "Digital chip verification test plan generator with three independent skills"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nbl_testplan_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
