[project]
name = "nbl-testplan-generator"
version = "3.0.1"
description = "数字芯片验证测试计划生成器，支持功能特性和配置特性的结构化测试点生成"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nbl_testplan_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["skills/nbl-tp-func-gen/scripts"]
