[project]
name = "nbl_testplan_creator"
version = "1.0.0"
description = "NBL IC verification testplan management tool"
requires-python = ">=3.10"
dependencies = ["openpyxl>=3.1"]

[project.scripts]
nbl-testplan = "nbl_testplan_creator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nbl_testplan_creator"]
